switch to secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.gpj5xe5.mongodb.net
-      MONGODB_USERNAME: pradeep
-      MONGODB_PASSWORD: U067lb2HDFdPUIW7
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
     runs-on: ubuntu-latest
     steps:
@@ -38,5 +38,5 @@ jobs:
       - name: Output information
         run: |        
           echo "MONGODB_USERNAME ${{ env.MONGODB_USERNAME }}"
-          echo "MONGODB_DB_NAME $env.MONGODB_DB_NAME"
+          echo "MONGODB_DB_NAME ${{ env.MONGODB_DB_NAME }}"
           
