--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ on:
       MONGODB_DB_NAME: gh-env-demo
 jobs:
   test:
+    environment: testing
+    name: Test and Build
     env:
       MONGODB_CLUSTER_ADDRESS: cluster0.gpj5xe5.mongodb.net
       MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
